--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/home/index.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/home/index.html
@@ -10,16 +10,9 @@
 <body>
 
 	<div layout:fragment="content">
-
-		<h1 class="titulo col-offset-1">Home</h1>
-		<h2 class="mensagem" th:text="${mensagem}"></h2>
-		<div class="col-offset-2 col-8">
-			<img
-				src="http://planejadosinbox.cia.tv/wp-content/uploads/2015/08/lavanderias-para-o-que-te-queremos-6.jpg" />
-		</div>
-		<div class="col-offset-2 col-8">
-			<img
-				src="http://planejadosinbox.cia.tv/wp-content/uploads/2015/08/lavanderias-para-o-que-te-queremos-6.jpg" />
+		<div class="content-section col-offset-1 col-10">
+			<h1 class="titulo col-offset-1">Home</h1>
+			<h2 class="mensagem col-offset-1" th:text="${mensagem}"></h2>
 		</div>
 	</div>
 </body>
