style(favicon): adicionar ícone.

--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/Layout.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/Layout.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8" />
 <title layout:title-pattern="$DECORATOR_TITLE - $CONTENT_TITLE">Lavanderia</title>
 <link rel="stylesheet" type="text/css" th:href="@{~/site.css}" />
+<link rel="icon" type="img/ico" href="http://www.rrmewl.com/media/catalog/category/cat_resized/WashingMachine.png" />
 </head>
 <body>
 	<div class="col-12 cabecalho">
