refactor(Mensagens de erro): adicionar mensagens personalizadas.

--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/pedido/edita.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/pedido/edita.html
@@ -39,7 +39,9 @@
 
 				<p>
 					<label class="control-label col-1">Peso</label> <input
-						th:field="*{peso}" type="text" class="control-label col-1" />
+						th:classappend="${#fields.hasErrors('peso')} ? 'has-error'"
+						th:field="*{peso}" type="text" class="control-label col-1" /><span
+						class="help-inline" th:errors="*{peso}"></span>
 				</p>
 
 				<p>
