style(Lavanderia): atualizar templates.

--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
@@ -13,8 +13,7 @@
 
 		<h1 class="titulo col-offset-1 col-11">Clientes</h1>
 
-
-		<div class="buscar col-12">
+		<div class="buscar content-section col-5 col-offset-1">
 			<form method="GET">
 
 				<p>
