--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/exibe.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/exibe.html
@@ -14,52 +14,54 @@
 
 		<h1 class="titulo col-offset-1">Cliente - Dados</h1>
 
-		<form th:object="${cliente}">
+		<div class="content-section col-5 col-offset-1">
+			<form th:object="${cliente}">
 
-			<p>
-				<label class="control-label col-2">Situação</label> <input
-					th:field="*{situacao}" type="text" disabled="true" />
-			</p>
+				<p>
+					<label class="control-label col-2">Situação</label> <input
+						th:field="*{situacao}" type="text" disabled="true" />
+				</p>
 
-			<p>
-				<label class="control-label col-2">Nome</label> <input
-					th:field="*{nome}" type="text" disabled="true" />
-			</p>
+				<p>
+					<label class="control-label col-2">Nome</label> <input
+						th:field="*{nome}" type="text" disabled="true" />
+				</p>
 
-			<p>
-				<label class="control-label col-2">CPF</label> <input
-					th:field="*{cpf}" type="text" disabled="true" />
-			</p>
+				<p>
+					<label class="control-label col-2">CPF</label> <input
+						th:field="*{cpf}" type="text" disabled="true" />
+				</p>
 
-			<p>
-				<label class="control-label col-2">E-mail</label> <input
-					th:field="*{email}" type="text" disabled="true" />
-			</p>
+				<p>
+					<label class="control-label col-2">E-mail</label> <input
+						th:field="*{email}" type="text" disabled="true" />
+				</p>
 
-			<p>
-				<label class="control-label col-2">Cidade: </label> <select
-					th:field="*{idCidade}" disabled="true">
-					<option th:each="c : ${cidades}" th:text="${c.nome}"
-						th:value="${c.idCidade}"></option>
-				</select>
-			</p>
+				<p>
+					<label class="control-label col-2">Cidade: </label> <select
+						th:field="*{idCidade}" disabled="true">
+						<option th:each="c : ${cidades}" th:text="${c.nome}"
+							th:value="${c.idCidade}"></option>
+					</select>
+				</p>
 
-			<p>
-				<label class="control-label col-2">Bairro</label> <input
-					th:field="*{bairro}" type="text" disabled="true" />
-			</p>
+				<p>
+					<label class="control-label col-2">Bairro</label> <input
+						th:field="*{bairro}" type="text" disabled="true" />
+				</p>
 
-			<p>
-				<label class="control-label col-2">Endereço</label> <input
-					th:field="*{endereco}" type="text" disabled="true" />
-			</p>
+				<p>
+					<label class="control-label col-2">Endereço</label> <input
+						th:field="*{endereco}" type="text" disabled="true" />
+				</p>
 
-			<p>
-				<label class="control-label col-2">CEP</label> <input
-					th:field="*{cep}" type="text" disabled="true" />
-			</p>
+				<p>
+					<label class="control-label col-2">CEP</label> <input
+						th:field="*{cep}" type="text" disabled="true" />
+				</p>
 
-		</form>
+			</form>
+		</div>
 	</div>
 
 </body>
