--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/pedido/lista.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/pedido/lista.html
@@ -11,10 +11,6 @@
 
 	<div layout:fragment="content">
 
-		<div th:if="${mensagem != null} ">
-			<h1 th:text="${mensagem}" class="msg-suc"></h1>
-		</div>
-
 		<h1 class="titulo col-offset-1 col-11">Pedidos</h1>
 
 		<div class="col-offset-1 col-10 content-section">
@@ -69,9 +65,9 @@
 
 					<td class="col-2">
 						<div class="border-default col-4 icon-link-container">
-							<a th:href="${'/pedidos/' + pedido.id}"><img
+							<a th:href="${'/pedidos/visualizar/' + pedido.id}"><img
 								src="http://www.honestmachines.com/images/icon_details.png"
-								title="detalhes" /></a>
+								title="visualizar" /></a>
 						</div>
 						<div class="border-default col-4 icon-link-container">
 							<a th:href="${'/pedidos/editar/' + pedido.id}"><img
@@ -79,9 +75,9 @@
 								title="editar" /></a>
 						</div>
 						<div class="border-default col-4 icon-link-container">
-							<a th:href="${'/pedidos/remover/' + pedido.id}"><img
+							<a th:href="${'/pedidos/cancelar/' + pedido.id}"><img
 								src="http://findicons.com/files/icons/1033/retrofukation/24/edit_delete.png"
-								title="remover" /></a>
+								title="cancelar pedido" /></a>
 						</div>
 					</td>
 				</tr>
