--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/produto/edita.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/produto/edita.html
@@ -14,35 +14,37 @@
 
 		<h1 class="titulo col-offset-1">Produto - editar</h1>
 
-		<form th:action="@{/produtos/editar}" th:object="${produto}"
-			method="post">
+		<div class="content-section col-5 col-offset-1">
+			<form th:action="@{/produtos/editar}" th:object="${produto}"
+				method="post">
 
-			<input th:field="*{id}" type="hidden" />
+				<input th:field="*{id}" type="hidden" />
 
-			<p>
-				<label class="control-label col-2">Valor</label> <input
-					th:classappend="${#fields.hasErrors('valor')} ? 'has-error'"
-					th:field="*{valor}" type="text" /> <span class="help-inline"
-					th:errors="*{valor}"></span>
-			</p>
+				<p>
+					<label class="control-label col-2">Valor</label> <input
+						th:classappend="${#fields.hasErrors('valor')} ? 'has-error'"
+						th:field="*{valor}" type="text" /> <span class="help-inline"
+						th:errors="*{valor}"></span>
+				</p>
 
-			<p>
-				<label class="control-label col-2">Prazo</label> <input
-					th:classappend="${#fields.hasErrors('prazo')} ? 'has-error'"
-					th:field="*{prazo}" type="text" /> <span class="help-inline"
-					th:errors="*{prazo}"></span>
-			</p>
+				<p>
+					<label class="control-label col-2">Prazo</label> <input
+						th:classappend="${#fields.hasErrors('prazo')} ? 'has-error'"
+						th:field="*{prazo}" type="text" /> <span class="help-inline"
+						th:errors="*{prazo}"></span>
+				</p>
 
-			<p>
-				<label class="control-label col-2">Situação</label> <select
-					th:field="*{situacao}">
-					<option th:each="s : ${situacoes}" th:text="${s}" th:value="${s}"></option>
-				</select> <span class="help-inline" th:errors="*{situacao}"></span>
-			</p>
+				<p>
+					<label class="control-label col-2">Situação</label> <select
+						th:field="*{situacao}">
+						<option th:each="s : ${situacoes}" th:text="${s}" th:value="${s}"></option>
+					</select> <span class="help-inline" th:errors="*{situacao}"></span>
+				</p>
 
-			<button type="submit">Salvar</button>
+				<button type="submit">Salvar</button>
 
-		</form>
+			</form>
+		</div>
 
 	</div>
 </body>
