--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/produto/lista.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/produto/lista.html
@@ -13,7 +13,7 @@
 
 		<h1 class="titulo col-offset-1 col-11">Produtos</h1>
 
-		<div class="buscar col-12">
+		<div class="buscar content-section col-5 col-offset-1">
 			<form method="GET">
 
 				<p>
@@ -48,7 +48,7 @@
 					<th class="border-default col-2">Valor(R$)</th>
 					<th class="border-default col-2">Prazo(dias)</th>
 					<th class="border-default col-2">Situação</th>
-					<th class="border-default col-2">Ações</th>
+					<th class="border-default col-2">Editar</th>
 				</tr>
 
 				<tr th:each="produto : ${produtos}">
@@ -64,15 +64,10 @@
 						class="border-default col-2 text-center text-center"></td>
 					<td class="col-2">
 
-						<div class="border-default col-6 icon-link-container">
-							<a th:href="${'/produtos/editar/' + produto.id}"><img
+						<div class="border-default col-12 icon-link-container">
+							<a style="margin-left:10%;" th:href="${'/produtos/editar/' + produto.id}"><img
 								src="http://iconizer.net/files/Gnome_icons/orig/gtk-edit.png"
 								title="editar" /></a>
-						</div>
-						<div class="border-default col-6 icon-link-container">
-							<a th:href="${'/produtos/remover/' + produto.id}"><img
-								src="http://findicons.com/files/icons/1033/retrofukation/24/edit_delete.png"
-								title="remover" /></a>
 						</div>
 					</td>
 				</tr>
