--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/produto/lista.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/produto/lista.html
@@ -44,7 +44,7 @@
 
 				<tr>
 					<th class="border-default col-2">Material</th>
-					<th class="border-default col-2">Servico</th>
+					<th class="border-default col-2">Serviço</th>
 					<th class="border-default col-2">Valor(R$)</th>
 					<th class="border-default col-2">Prazo(dias)</th>
 					<th class="border-default col-2">Situação</th>
