refactor(Layout): ajustar exibição dos botões.

--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/Layout.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/Layout.html
@@ -27,7 +27,7 @@
 
 		</div>
 
-		<div sec:authorize="isAuthenticated()"
+		<div sec:authorize="!isAuthenticated()"
 			class="col-offset-4 col-2">
 			<form th:action="@{/login}" method="POST">
 
