--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/pedido/edita.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/pedido/edita.html
@@ -4,7 +4,7 @@
 	layout:decorator="Layout">
 <head>
 <meta charset="UTF-8" />
-<title>Insert title here</title>
+<title>Pedido</title>
 <link rel="stylesheet" type="text/css" th:href="@{~/site.css}" />
 <script type="text/javascript"
 	src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
