--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/edita.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/edita.html
@@ -4,7 +4,7 @@
 	layout:decorator="Layout">
 <head>
 <meta charset="UTF-8" />
-<title>Insert title here</title>
+<title>Cliente</title>
 <link rel="stylesheet" type="text/css" th:href="@{~/site.css}" />
 </head>
 <body>
